package com.mhm.struct.proxy.invocation;

/**
 * @author MHm
 * @date 2020-4-23 10:33
 */
public interface DynamicSubject {
    void method();
}
