@startuml

RealDynamicSubject <|.. DynamicSubject
InvocationHandler <|.. DynamicProxy

DynamicProxy --> RealDynamicSubject

interface InvocationHandler{
}
interface DynamicSubject{
method()
}

class RealDynamicSubject{
method()
}

class DynamicProxy {
DynamicProxy(DynamicSubject subject)
invoke(Object proxy, Method method, Object[] args)
}



@enduml